# dt-hack

./: .gitignore  PRESENTATION_SCRIPT.md  README.md  agent_deployment.bash  dev-info.md  setup-gcp-secrets.md
ReLeaf_Agent/: .env  README.md  agent.py  deployment.bash  pyproject.toml  requirements.txt
ReLeaf_Agent/ReLeaf_the_earth_ppt/: .~ReLeaf_ AI Urban Tree Advisor.pptx  ReLeaf_ AI Urban Tree Advisor.pptx  presentation.html  presentation.md
ReLeaf_Agent/mcp/: Dockerfile  geocoding_search.py  pyproject.toml  server.py  test_server.py
ReLeaf_Agent/mcp/src/: __init__.py  get_areas_where_more_trees_can_be_planted.py
ReLeaf_Agent/mcp/urban_tree_planting/: GROUND_DETECTION_README.md
ReLeaf_Agent/mcp/urban_tree_planting/config/: settings.py
ReLeaf_Agent/mcp/urban_tree_planting/core/: __init__.py  detector.py  downloader.py  ground_tree_detector.py  mask_generator.py  priority_calculator.py  transformer.py  visualizer.py
ReLeaf_Agent/mcp/urban_tree_planting/examples/: ground_detection_example.py
ReLeaf_Agent/mcp/urban_tree_planting/pipeline/: processor.py
ReLeaf_Agent/mcp/urban_tree_planting/scripts/: run_analysis.py
ReLeaf_Agent/mcp/urban_tree_planting/utils/: logger.py
dev/: README.md  config.py
docs/: AGENT_WORKFLOW.md  INTEGRATION_SUMMARY.md
notebooks/: 01-overview-osmnx.ipynb  03-3d-building-extraction.ipynb  auto_trust.sh  get_areas_where_more_tree_can_be_planted.ipynb  ttdi_plantable_area.html  ttdi_plantable_inside_grass.html  ttdi_plantable_trees.html
presentation/: README.md  package.json  slides.md
urban_tree_planting/: heatmap_README.md
(+8 files in other folders)
